syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "HelloWorldProto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc SayHelloManyTimes (HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string firstname=1;
  string lastname = 2;

}

message HelloReply {
  string message = 1;
}

service JsonService {
  rpc SendJsonFile(JsonFileRequest) returns (JsonFileResponse) {}
}

message JsonFileRequest {
  bytes json_file_content = 1;
}

message JsonFileResponse {
  string status = 1;
}
